# esp-idf-ili9340

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: espidf-compile.yml
.github/workflows /: espidf-compile.yml
components/ili9340/: CMakeLists.txt  Kconfig.projbuild  ili9340.c  ili9340.h
main/: CMakeLists.txt  Kconfig.projbuild  decode_image.c  fontx.c  fontx.h  ili9340.c  ili9340.h  main.c  pngle.c  pngle.h
